handle network error&loading

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Simple Posts</string>
     <string name="posts">Posts</string>
     <string name="comments">Comments</string>
+    <string name="network_error">Network Error</string>
+    <string name="no_post">No Post</string>
 </resources>
