--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="comments">Comments</string>
     <string name="network_error">Network Error</string>
     <string name="no_post">No Post</string>
+    <string name="edit_post">Edit post</string>
+    <string name="delete_post">Delete post</string>
+    <string name="edit">Edit</string>
+    <string name="done">Done</string>
 </resources>
